2011-01-16	Stephan Linz <linz@li-pro.net>

	* platform: upgrade to u-boot-2010.12
	* platform: upgrade to linux-2.6.31.13

2010-11-14	Stephan Linz <linz@li-pro.net>

	* platform: adapt fsblob to real flash partition, fsblob at 0xaff80000

2010-10-10	Stephan Linz <linz@li-pro.net>

	* common: initial import in git and first light on http://gitorious.org/oselas
	* platform: change over to Xilinx MicroBlaze Tools v1.0

2010-09-11	Stephan Linz <linz@li-pro.net>

	* common: initial version Xilinx-SP3ADSP1800-MMU-lite-12.2
